# periop-anesthesia-agent

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  band-agent-config.example.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: band_collaboration.py  safety.py  sdk_workflow.py  workflow.py
backend/app/api/: routes.py
backend/app/core/: store.py
backend/app/evals/: cases.jsonl  run_local.py
backend/app/schemas/: periop.py
backend/app/tools/: document_extractors.py  ecg.py  lab_checks.py  report_export.py  risk_scores.py
backend/tests/: test_api.py  test_ecg.py  test_lab_checks.py  test_safety.py  test_sdk_workflow.py  test_workflow.py
data/samples/: sample-preop-ecg.txt
docs/: README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  band-hackathon-plan.md  launch-checklist.md  safety-boundary.md  safety-evals.md  ui-blueprint.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: i18n.js  main.jsx  staticDemo.js  styles.css
scripts/: check-band-live.sh  start-demo.sh  verify-local.sh
