[project]
name = "periop-anesthesia-agent-backend"
version = "0.1.0"
description = "Local perioperative anesthesia assessment prototype using OpenAI Agents SDK."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "openai-agents>=0.0.14",
  "pillow>=10",
  "pydantic>=2",
  "pypdf>=5",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "pytesseract>=0.3",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

